// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the product main page. Should render the product repository edit page. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-meadow font-semibold"
              >
                @firma
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Product."
                    class="object-contain"
                    src="http://localhost:3000//assets/products/firma.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//administracionelectronica.gob.es/ctt/clienteafirma"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        administracionelectronica.gob.es/ctt/clienteafirma
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    License
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    NONE
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-meadow"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="flex flex-col gap-y-2"
                  >
                    <div>
                      <div>
                        State and Democracy (Good Governance)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="flex flex-col gap-y-3 text-sm py-3"
            >
              <div
                class="font-semibold text-dial-blueberry"
              >
                Jump To
              </div>
              <div
                class=" css-1uaxf62-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-:r1:-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="react-select__control css-afrqkl-control"
                >
                  <div
                    class="react-select__value-container css-17t7gkf-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-5rjclb-placeholder"
                      id="react-select-:r1:-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class="react-select__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-:r1:-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Current active navigation"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="react-select__input"
                        id="async-select-id-undefined"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6 text-dial-meadow"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold"
              >
                Edit @firma
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="name"
                >
                  Repository Name
                </label>
                <input
                  class="w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Repository Name"
                  type="text"
                  value=""
                />
              </div>
              <label
                class="flex gap-x-2 items-center self-start text-dial-sapphire"
              >
                <input
                  class="h-5 w-5"
                  name="mainRepository"
                  type="checkbox"
                />
                This is the main repository.
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="absoluteUrl"
                >
                  Repository Location
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <span
                    class="select-none text-dial-gray"
                  >
                    https://
                  </span>
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="absoluteUrl"
                    placeholder="Repository Location"
                    value="github.com/ctt-gob-es/clienteafirma"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                >
                  Repository Description
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-placeholder="Enter plain text..."
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                            dir="ltr"
                          >
                            <span
                              data-lexical-text="true"
                            >
                              Repository of @firma.
                            </span>
                          </p>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container table-cell-action-button-container--inactive"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  disabled=""
                  type="submit"
                >
                  Submit Product
                  <svg
                    class="spinner ml-3"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                    />
                  </svg>
                </button>
                <button
                  class="cancel-button"
                  disabled=""
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the product main page. Should render the product repository page. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-meadow font-semibold"
              >
                @firma
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Product."
                    class="object-contain"
                    src="http://localhost:3000//assets/products/firma.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//administracionelectronica.gob.es/ctt/clienteafirma"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        administracionelectronica.gob.es/ctt/clienteafirma
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    License
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    NONE
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-meadow"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="flex flex-col gap-y-2"
                  >
                    <div>
                      <div>
                        State and Democracy (Good Governance)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="flex flex-col gap-y-3 text-sm py-3"
            >
              <div
                class="font-semibold text-dial-blueberry"
              >
                Jump To
              </div>
              <div
                class=" css-1uaxf62-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-:r0:-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                />
                <div
                  class="react-select__control css-afrqkl-control"
                >
                  <div
                    class="react-select__value-container css-17t7gkf-ValueContainer"
                  >
                    <div
                      class="react-select__placeholder css-5rjclb-placeholder"
                      id="react-select-:r0:-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class="react-select__input-container css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-autocomplete="list"
                        aria-describedby="react-select-:r0:-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        aria-label="Current active navigation"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class="react-select__input"
                        id="async-select-id-undefined"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class="react-select__indicator-separator css-nyxz9h-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class="react-select__indicator react-select__dropdown-indicator css-2hgo35-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
            <div
              class="hidden lg:flex flex-col gap-y-3"
            >
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Bookmark
                </div>
                <button
                  class="group flex flex-row gap-x-3"
                  type="button"
                >
                  <img
                    alt="Logo of Bookmark."
                    class="object-contain"
                    height="40"
                    src="/ui/v1/bookmark-icon.svg"
                    width="40"
                  />
                  <div
                    class="my-auto border-b border-transparent group-hover:border-dial-slate-500"
                  >
                    <div
                      class="text-sm text-dial-stratos text-left"
                    >
                      Bookmark this page.
                    </div>
                  </div>
                </button>
                <div
                  class="text-sm text-dial-stratos"
                >
                  Your bookmarks can be found in your Account page.
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Share
                </div>
                <div
                  class="flex flex-row gap-3"
                >
                  <button>
                    <img
                      alt="Logo of LinkedIn."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/linkedin-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <div
                      class="bg-dial-iris-blue rounded-full w-[40px] h-[40px]"
                    >
                      <div
                        class="flex items-center h-full"
                      >
                        <img
                          alt="Logo of WhatsApp."
                          class="my-auto mx-auto"
                          height="20"
                          src="/ui/v1/whatsapp-icon.svg"
                          width="20"
                        />
                      </div>
                    </div>
                  </button>
                  <button>
                    <img
                      alt="Logo of Email."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/email-icon.svg"
                      width="40"
                    />
                  </button>
                  <button>
                    <img
                      alt="Logo of Copy."
                      class="object-contain"
                      height="40"
                      src="/ui/v1/copy-icon.svg"
                      width="40"
                    />
                  </button>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
              <div
                class="flex flex-col gap-3 py-3"
              >
                <div
                  class="text-dial-sapphire font-semibold"
                >
                  Comment
                </div>
                <div
                  class="text-sm text-dial-stratos"
                >
                  
    Have a question for the community on this Use Case Step or have some insight you would like to share?
  
                </div>
                <div
                  class="flex text-white"
                >
                  <div
                    class="bg-dial-iris-blue rounded-md text-sm"
                  >
                    <button
                      class="px-5 py-3"
                      type="button"
                    >
                      Post a comment
                    </button>
                  </div>
                </div>
              </div>
              <hr
                class="border-b border-dial-slate-200"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <div
          class="px-4 lg:px-0 py-4 lg:py-6"
        >
          <div
            class="flex flex-col gap-y-3"
          >
            <div
              class="flex gap-x-3 ml-auto"
            >
              <a
                class="cursor-pointer bg-dial-iris-blue px-2 py-1 rounded text-white"
                href="/products/firma/repositories/firma-repository/edit"
              >
                <svg
                  class="inline pb-0.5"
                  fill="none"
                  height="1em"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 20h9"
                  />
                  <path
                    d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
                  />
                </svg>
                <span
                  class="text-sm px-1"
                >
                  Edit
                </span>
              </a>
            </div>
            <div
              class="text-xl font-semibold text-dial-blueberry py-3"
            >
              Description
            </div>
            <div
              class="block"
            >
              <div
                class="editor-shell read-only"
              >
                <div
                  class="editor-container "
                >
                  <div
                    class="editor-scroller"
                  >
                    <div
                      class="editor"
                    >
                      <div
                        aria-autocomplete="none"
                        aria-placeholder="Enter plain text..."
                        aria-readonly="true"
                        class="ContentEditable__root read-only"
                        contenteditable="false"
                        data-lexical-editor="true"
                        spellcheck="true"
                        style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                      >
                        <p
                          class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                          dir="ltr"
                        >
                          <span
                            data-lexical-text="true"
                          >
                            Repository of @firma.
                          </span>
                        </p>
                      </div>
                      <div
                        draggable="true"
                      />
                      <div
                        class="draggable-block-target-line"
                      />
                      <div
                        class="link-editor"
                        style="opacity: 0; transform: translate(-10000px, -10000px);"
                      />
                    </div>
                  </div>
                  <div />
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
            <div
              class="text-lg font-semibold text-dial-blueberry py-3"
            >
              Repository Location
            </div>
            <div
              class="flex pb-3 text-dial-stratos text-sm"
            >
              <a
                class="flex border-b border-dial-iris-blue "
                href="//github.com/ctt-gob-es/clienteafirma"
                rel="noreferrer"
                target="_blank"
              >
                <div
                  class="line-clamp-1 break-all"
                >
                  github.com/ctt-gob-es/clienteafirma
                </div>
              </a>
               ⧉
            </div>
            <hr
              class="border-b border-dial-blue-chalk my-3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the product main page. Should render unauthorized to edit repository. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="min-h-[75vh] flex items-center justify-center"
  >
    <div
      class="flex flex-col gap-y-6"
    >
      <svg
        class="spinner mx-auto"
        fill="currentColor"
        height="3em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="3em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
        />
      </svg>
      <div
        class="text-center"
      >
        Processing request ...
      </div>
    </div>
  </div>
</div>
`;
